{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 32,
  "lineage": "acbe3352-0ddf-80d0-17f0-fd804494bec6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/34c6c373-ad28-45b2-a866-de1d853f2812/resourceGroups/rg-calicot-web-dev-14/providers/Microsoft.Network/networkSecurityGroups/nsg-dev-db-cc-14",
            "location": "canadacentral",
            "name": "nsg-dev-db-cc-14",
            "resource_group_name": "rg-calicot-web-dev-14",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowWebSubnet",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAllInbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/34c6c373-ad28-45b2-a866-de1d853f2812/resourceGroups/rg-calicot-web-dev-14/providers/Microsoft.Network/networkSecurityGroups/nsg-dev-web-cc-14",
            "location": "canadacentral",
            "name": "nsg-dev-web-cc-14",
            "resource_group_name": "rg-calicot-web-dev-14",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/34c6c373-ad28-45b2-a866-de1d853f2812/resourceGroups/rg-calicot-web-dev-14/providers/Microsoft.Network/virtualNetworks/vnet-dev-calicot-cc-14/subnets/snet-dev-db-cc-14",
            "name": "snet-dev-db-cc-14",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-calicot-web-dev-14",
            "service_endpoints": [
              "Microsoft.Sql"
            ],
            "virtual_network_name": "vnet-dev-calicot-cc-14"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "webapp-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Web/serverFarms"
                  }
                ]
              }
            ],
            "id": "/subscriptions/34c6c373-ad28-45b2-a866-de1d853f2812/resourceGroups/rg-calicot-web-dev-14/providers/Microsoft.Network/virtualNetworks/vnet-dev-calicot-cc-14/subnets/snet-dev-web-cc-14",
            "name": "snet-dev-web-cc-14",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-calicot-web-dev-14",
            "service_endpoints": [
              "Microsoft.Web"
            ],
            "virtual_network_name": "vnet-dev-calicot-cc-14"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/34c6c373-ad28-45b2-a866-de1d853f2812/resourceGroups/rg-calicot-web-dev-14/providers/Microsoft.Network/virtualNetworks/vnet-dev-calicot-cc-14/subnets/snet-dev-db-cc-14",
            "network_security_group_id": "/subscriptions/34c6c373-ad28-45b2-a866-de1d853f2812/resourceGroups/rg-calicot-web-dev-14/providers/Microsoft.Network/networkSecurityGroups/nsg-dev-db-cc-14",
            "subnet_id": "/subscriptions/34c6c373-ad28-45b2-a866-de1d853f2812/resourceGroups/rg-calicot-web-dev-14/providers/Microsoft.Network/virtualNetworks/vnet-dev-calicot-cc-14/subnets/snet-dev-db-cc-14"
          },
          "dependencies": [
            "azurerm_network_security_group.db_nsg",
            "azurerm_subnet.db_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/34c6c373-ad28-45b2-a866-de1d853f2812/resourceGroups/rg-calicot-web-dev-14/providers/Microsoft.Network/virtualNetworks/vnet-dev-calicot-cc-14/subnets/snet-dev-web-cc-14",
            "network_security_group_id": "/subscriptions/34c6c373-ad28-45b2-a866-de1d853f2812/resourceGroups/rg-calicot-web-dev-14/providers/Microsoft.Network/networkSecurityGroups/nsg-dev-web-cc-14",
            "subnet_id": "/subscriptions/34c6c373-ad28-45b2-a866-de1d853f2812/resourceGroups/rg-calicot-web-dev-14/providers/Microsoft.Network/virtualNetworks/vnet-dev-calicot-cc-14/subnets/snet-dev-web-cc-14"
          },
          "dependencies": [
            "azurerm_network_security_group.web_nsg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "32122130-fe9e-41ba-9520-7bcb285abb6f",
            "id": "/subscriptions/34c6c373-ad28-45b2-a866-de1d853f2812/resourceGroups/rg-calicot-web-dev-14/providers/Microsoft.Network/virtualNetworks/vnet-dev-calicot-cc-14",
            "location": "canadacentral",
            "name": "vnet-dev-calicot-cc-14",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-calicot-web-dev-14",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}